--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
+    "base-64": "^1.0.0",
     "expo": "~49.0.11",
-    "expo-av": "~13.4.1",
+    "expo-av": "^13.6.0",
     "expo-image": "~1.3.3",
     "expo-router": "^2.0.0",
     "expo-sharing": "~11.5.0",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
