--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "base-64": "^1.0.0",
     "expo": "~49.0.11",
     "expo-av": "^13.6.0",
+    "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.3",
     "expo-router": "^2.0.0",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
+    "mime": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -29,8 +31,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-file-system": "~15.4.4"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
